# concurrency-benchmarks

./: LICENSE  ReadMe.md
dotnetws/: .gitignore  Program.cs  appsettings.json  hello.html
gows/: main.go
gows_tcp/: hello.html  main.go
java_undertow/: pom.xml
javaws/: .gitignore  hello.html
javaws/src/: JavaAsyncHTTPServer.java  JavaHTTPServer.java  JavaHTTPServerCopy.java
jsws/: hello.html  main.js
jsws_thread/: main.js
kotlinws/: .gitignore  hello.html
results/: best.md  extract-ab.js  go_http.txt  go_tcp.txt  javaws.txt  javaws_async.txt  jsws.txt  jsws_thread.txt  package-lock.json  package.json  rustws-asnyc-thread.txt  rustws-asnyc-tokio.txt  rustws-asnyc.txt  rustws.txt  tsws.txt
results/apachebench/: go_http.txt  rustws-asnyc-thread.txt  tsws.txt
results/nosleep/: benchmark-1.yml  benchmark-2.yml  drill-benchmark-1-taskset.md  drill-benchmark-1.md  drill-benchmark-2-taskset.md  drill-benchmark-2.md  script.sh  wrk-taskset.md  wrk.md
rust_actixweb/: Cargo.toml
rust_actixweb/src/: main.rs
rust_tokiows/src/: main.rs
rustws/: Cargo.toml
rustws/src/: lib.rs  main.rs
rustws_async/: Cargo.toml
rustws_async/src/: main.rs
rustws_async_hyper/: Cargo.toml
rustws_async_smol/: Cargo.toml
rustws_async_smol/src/: main.rs
rustws_async_thread/: Cargo.toml
rustws_async_thread/src/: main.rs
rustws_async_tinyhttp/: Cargo.toml
rustws_async_tinyhttp/src/: main.rs
rustws_async_tokio/: Cargo.toml
rustws_async_tokio/src/: main.rs
rustws_tokiominihttp/: Cargo.toml
tsws/: hello.html  main-forawait.ts  main.ts
(+3 files in other folders)
