[package]
name = "rustws_async_thread"
version = "0.1.0"
authors = ["deepu105 <d4udts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.futures]
version = "0.3.19"
default-features = false
features = ["thread-pool"]