[package]
name = "rust_tokiows"
version = "0.1.0"
authors = ["deepu105 <d4udts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.11"
env_logger = "0.8"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }